force-app/main/default/objects/Run__c/Run__c.object-meta.xml
<CustomObject>
    <description>Single execution of the agent loop.</description>
    <label>Run</label>
    <nameField>
        <displayFormat>RUN-{000000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>