force-app/main/default/objects/Run__c/fields/AgentConfig__c.field-meta.xml
<CustomField>
    <fullName>AgentConfig__c</fullName>
    <label>Agent Config</label>
    <referenceTo>AgentConfig__c</referenceTo>
    <relationshipLabel>Runs</relationshipLabel>
    <relationshipName>Runs</relationshipName>
    <type>Lookup</type>
</CustomField>