force-app/main/default/objects/Run__c/fields/CancelRequested__c.field-meta.xml
<CustomField>
    <fullName>CancelRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Requested</label>
    <type>Checkbox</type>
</CustomField>