force-app/main/default/objects/Run__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <label>Conversation</label>
    <referenceTo>Conversation__c</referenceTo>
    <relationshipLabel>Runs</relationshipLabel>
    <relationshipName>Runs</relationshipName>
    <type>Lookup</type>
</CustomField>