force-app/main/default/objects/Run__c/fields/FinalResponse__c.field-meta.xml
<CustomField>
    <fullName>FinalResponse__c</fullName>
    <label>Final Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>