force-app/main/default/objects/Run__c/fields/ScheduledTask__c.field-meta.xml
<CustomField>
    <fullName>ScheduledTask__c</fullName>
    <label>Scheduled Task</label>
    <referenceTo>ScheduledTask__c</referenceTo>
    <relationshipLabel>Runs</relationshipLabel>
    <relationshipName>Runs</relationshipName>
    <type>Lookup</type>
</CustomField>