force-app/main/default/objects/Run__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>