force-app/main/default/objects/Run__c/fields/TriggerType__c.field-meta.xml
<CustomField>
    <fullName>TriggerType__c</fullName>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>chat</fullName>
                <default>true</default>
                <label>Chat</label>
            </value>
            <value>
                <fullName>schedule</fullName>
                <label>Schedule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>