force-app/main/default/objects/Run__c/fields/TurnCount__c.field-meta.xml
<CustomField>
    <fullName>TurnCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Turn Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>