force-app/main/default/objects/Run__c/fields/UserPrompt__c.field-meta.xml
<CustomField>
    <fullName>UserPrompt__c</fullName>
    <label>User Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>